--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
   <header class="header"></header>
   <main class="main container">
     <section class="section">
-      <h1>
-        Bom bom
-      </h1>
+      <form action="">
+        <label for="input1">
+          Двожина
+          <input id="input1" type="text">
+        </label>
+
+        <label for="input2">
+          ширина
+          <input id="input2" type="text">
+        </label>
+
+        <p for="input3">
+        </p>
+
+        <input onclick="func(hello)" id="button" type="button" value="click">
+
+      </form>
     </section>
   </main>
   <footer class="footer">
