--- a/index.html
+++ b/index.html
@@ -14,20 +14,31 @@
   <main class="main container">
     <section class="section">
       <form action="">
-        <label for="input1">
-          Двожина
+        <label for="input1">Довжина мм
           <input id="input1" type="text">
         </label>
-
-        <label for="input2">
-          ширина
+        <label for="input2">Ширина мм
           <input id="input2" type="text">
         </label>
+        <label for="input3">Товщина мм
+          <input id="input3" type="text">
+        </label>
 
-        <p for="input3">
-        </p>
 
-        <input onclick="func(hello)" id="button" type="button" value="click">
+        <div>
+          Вага
+          <p id="input10">
+          </p>
+        </div>
+
+        <div>
+          Площа
+          <p id="input11">
+          </p>
+        </div>
+
+
+        <input id="button" type="button" value="Vitalik lox">
 
       </form>
     </section>
