--- a/index.html
+++ b/index.html
@@ -12,36 +12,68 @@
 <body>
   <header class="header"></header>
   <main class="main container">
-    <section class="section">
-      <form action="">
-        <label for="input1">Довжина мм
-          <input id="input1" type="text">
-        </label>
-        <label for="input2">Ширина мм
-          <input id="input2" type="text">
-        </label>
-        <label for="input3">Товщина мм
-          <input id="input3" type="text">
-        </label>
+    <div class="calc">
+      <div class="metal">
+        <button class="calc__sheet-btn" type="button">Лист</button>
+        <button class="calc__profile-pipe-btn" type="button">Труба профільна</button>
+        <button class="calc__pipe-btn" type="button">Труба</button>
+      </div>
 
+      <div class="calc__sheet">
+        <form action="">
+          <label for="length">Довжина мм
+            <input id="length" type="number">
+          </label>
+          <label for="width">Ширина мм
+            <input id="width" type="number">
+          </label>
+          <label for="weight">Товщина мм
+            <input id="weight" type="number">
+          </label>
+          <div class="result">
+            <div class="result__box">
+              Вага кг
+              <p id="mass">
+              </p>
+            </div>
+            <div class="result__box">
+              Площа м2
+              <p id="area">
+              </p>
+            </div>
+          </div>
+          <input id="calc__sheet-button" type="button" value="Розрахувати">
+        </form>
+      </div>
 
-        <div>
-          Вага
-          <p id="input10">
-          </p>
-        </div>
+      <div class="calc__profile-pipe">
+        <form action="">
+          <label for="length">Труба мм
+            <input id="length" type="number">
+          </label>
+          <label for="width">Труба мм
+            <input id="width" type="number">
+          </label>
+          <label for="weight">Труба мм
+            <input id="weight" type="number">
+          </label>
+          <div class="result">
+            <div class="result__box">
+              Труба кг
+              <p id="mass">
+              </p>
+            </div>
+            <div class="result__box">
+              Труба м2
+              <p id="area">
+              </p>
+            </div>
+          </div>
+          <input id="calc__sheet-button" type="button" value="Розрахувати">
+        </form>
+      </div>
+    </div>
 
-        <div>
-          Площа
-          <p id="input11">
-          </p>
-        </div>
-
-
-        <input id="button" type="button" value="Vitalik lox">
-
-      </form>
-    </section>
   </main>
   <footer class="footer">
   </footer>
