--- a/index.html
+++ b/index.html
@@ -2,82 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
-  <link rel="stylesheet" href="styles/style-min.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 
 <body>
-  <header class="header"></header>
-  <main class="main container">
-    <div class="calc">
-      <div class="metal">
-        <button class="calc__sheet-btn" type="button">Лист</button>
-        <button class="calc__profile-pipe-btn" type="button">Труба профільна</button>
-        <button class="calc__pipe-btn" type="button">Труба</button>
-      </div>
-
-      <div class="calc__sheet">
-        <form action="">
-          <label for="length">Довжина мм
-            <input id="length" type="number">
-          </label>
-          <label for="width">Ширина мм
-            <input id="width" type="number">
-          </label>
-          <label for="weight">Товщина мм
-            <input id="weight" type="number">
-          </label>
-          <div class="result">
-            <div class="result__box">
-              Вага кг
-              <p id="mass">
-              </p>
-            </div>
-            <div class="result__box">
-              Площа м2
-              <p id="area">
-              </p>
-            </div>
-          </div>
-          <input id="calc__sheet-button" type="button" value="Розрахувати">
-        </form>
-      </div>
-
-      <div class="calc__profile-pipe">
-        <form action="">
-          <label for="length">Труба мм
-            <input id="length" type="number">
-          </label>
-          <label for="width">Труба мм
-            <input id="width" type="number">
-          </label>
-          <label for="weight">Труба мм
-            <input id="weight" type="number">
-          </label>
-          <div class="result">
-            <div class="result__box">
-              Труба кг
-              <p id="mass">
-              </p>
-            </div>
-            <div class="result__box">
-              Труба м2
-              <p id="area">
-              </p>
-            </div>
-          </div>
-          <input id="calc__sheet-button" type="button" value="Розрахувати">
-        </form>
-      </div>
-    </div>
-
-  </main>
-  <footer class="footer">
-  </footer>
-  <script src="js/index.js"></script>
+  <a href="calc.html">Калькулятор металу</a>
 </body>
 
 </html>
