--- a/index.html
+++ b/index.html
@@ -5,11 +5,103 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ArmaxMG</title>
+  <link rel="stylesheet" href="styles/style-min.css" />
 </head>
 
 <body>
-  <a href="calc.html">Калькулятор металу</a>
+  <header class="header">
+    <div class="header__container container">
+      <div class="menu">
+        <h1 class="nav__logo"><a href="#">ArmaxMG</a></h1>
+
+
+        <ul class="nav__list-social">
+          <li><a href="#">face</a> </li>
+          <li><a href="#">instagram</a></li>
+        </ul>
+
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="calc.html">Послуги</a>
+            </li>
+            <li class="nav__item">
+              <a href="calc.html">Про нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="calc.html">Контакти</a>
+            </li>
+            <li class="nav__item">
+              <a href="calc.html">Калькулятор металу</a>
+            </li>
+            <li class="nav__item">
+              <a href="calc.html">фейсбук</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="burger-btn">bur</button>
+      </div>
+
+
+
+
+    </div>
+  </header>
+  <main class="main container">
+
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. A blanditiis facere in. Magni tenetur aliquid repudiandae
+    dolores expedita, nisi corporis sed eveniet, exercitationem obcaecati est nesciunt! Nulla minima ab dolorum?
+    Error debitis ipsum voluptas laboriosam aliquam repellendus nesciunt corrupti maxime? Qui alias nobis fuga maxime,
+    expedita quaerat repellendus laudantium. Nihil deserunt quam veritatis sunt recusandae expedita. Dignissimos nostrum
+    nihil quia.
+    Qui sequi doloremque provident eveniet praesentium doloribus maxime corporis veritatis voluptatibus voluptatem in
+    hic dicta pariatur, ipsam deleniti, laudantium excepturi repellendus dolores. Minima eum dolor voluptate molestiae
+    debitis delectus reiciendis.
+    Officia doloribus deleniti minima velit optio atque recusandae rem hic nostrum laudantium repellat autem repudiandae
+    libero, sequi similique! Expedita minima quibusdam rerum eligendi id cum excepturi necessitatibus omnis, ullam
+    voluptas.
+    Dolorum quod est laudantium, enim harum numquam ea obcaecati reprehenderit, voluptatibus, amet in? Optio beatae
+    blanditiis debitis eligendi, culpa incidunt esse quo, veniam dignissimos minima nulla saepe facere voluptas atque?
+    Nesciunt modi quia eveniet illum explicabo aperiam eligendi ullam, iusto placeat repudiandae fugit cupiditate quas
+    perspiciatis temporibus magni quisquam blanditiis doloribus maxime voluptate consequatur sequi aspernatur quidem.
+    Officia, saepe molestiae!
+    Earum alias ratione vitae, excepturi, maxime quaerat ullam tempore quas, exercitationem amet incidunt expedita sunt
+    dolore saepe eaque voluptatibus pariatur eos autem rerum. Fuga molestias, quae adipisci id officiis commodi.
+    Odio rem maxime adipisci tempora ducimus nobis temporibus ipsa necessitatibus provident laborum, beatae minima amet
+    commodi possimus velit nulla ratione, veniam nihil? Quasi dignissimos vel labore inventore quos tenetur laboriosam!
+    Reprehenderit tenetur earum hic quasi quibusdam veritatis, voluptates vero incidunt? Sit assumenda perferendis ea
+    corporis reprehenderit magni, voluptates minus nisi, quam vitae dolore rerum suscipit harum numquam? Saepe, eligendi
+    quasi!
+    Cum, voluptates fuga maxime, quidem cumque esse repellendus fugit illum est officiis possimus atque qui quam
+    commodi, ad odit quos asperiores nesciunt corrupti reiciendis obcaecati perferendis ratione architecto! Natus,
+    reiciendis.
+    Id totam eum commodi minus eius delectus voluptatibus accusantium, natus similique fugiat voluptate maiores quis
+    atque architecto iure asperiores? Optio magni labore sed, quod fugiat maxime! Provident, magnam accusantium.
+    Ducimus.
+    Animi minus repudiandae eveniet voluptatibus blanditiis hic quos porro doloribus est explicabo delectus at, nesciunt
+    ut sit sed amet, unde odio cum consequuntur cupiditate? Expedita quas perspiciatis inventore eius autem.
+    Animi, exercitationem? Libero neque totam, iusto quasi rerum voluptates deserunt temporibus fugiat at magni quaerat,
+    corporis eum consequuntur inventore consequatur tempora. Nostrum numquam maiores nulla deserunt praesentium natus
+    voluptate similique!
+    Quisquam eos nihil repellat dolorem a voluptatum nostrum vitae asperiores, fugit cumque et labore neque qui
+    reiciendis obcaecati eius veniam optio sint. Corrupti nulla dolorum amet fugit tempora natus sapiente!
+    Aliquid, ab amet. Quas commodi ab ex voluptatum? Officia, maiores blanditiis id voluptate dicta eligendi commodi.
+    Quam dicta quo tenetur excepturi voluptate at, accusantium rem, itaque est ab sint labore.
+    Illum non aut sit eius, culpa pariatur? Dolorem doloremque dolores magnam sunt ut, illum blanditiis quas totam?
+    Alias corporis fugiat deleniti nostrum illo sint, quia, velit minus doloremque blanditiis asperiores.
+    Perspiciatis illo voluptatibus corrupti aspernatur velit consequuntur cum eius minima iste, reiciendis odit labore
+    deleniti ipsum pariatur reprehenderit ad eum consectetur alias maxime? Dignissimos minus, veniam neque quisquam
+    numquam atque.
+    Recusandae, ipsam quis cumque asperiores ducimus maxime neque incidunt numquam illo. Quam, similique ratione minima
+    vel labore, ducimus harum eveniet, temporibus est maiores in ipsum autem libero explicabo cumque quidem?
+    Dicta suscipit temporibus qui placeat a nobis repellat quis repudiandae ad error id, neque tenetur aperiam veritatis
+    voluptatum accusantium perspiciatis, fugit, quo eligendi quisquam itaque doloribus? Itaque repudiandae quis ipsam?
+    Distinctio provident facere beatae sapiente cumque excepturi eaque! A, autem voluptatum atque, asperiores ullam,
+    voluptatem veniam eum totam quas harum ipsam iste veritatis. Fugit esse qui iusto dolorum aut laudantium!
+  </main>
+  <script src="js/index.js"></script>
+
 </body>
 
 </html>
