--- a/calc.html
+++ b/calc.html
@@ -11,7 +11,9 @@
 
 <body>
 
-	<header class="header"></header>
+	<header class="header">
+
+	</header>
 	<main class="main container">
 		<a href="index.html">головна сторінка</a>
 		<div class="calc">
