--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
   <header class="header">
     <div class="header__container container">
       <div class="menu">
-        <h1 class="nav__logo"><a href="#">ArmaxMG</a></h1>
-
-
-        <ul class="nav__list-social">
-          <li><a href="#">face</a> </li>
-          <li><a href="#">instagram</a></li>
+        <button class="burger-btn" href="#"><span></span></button>
+        <h1 class="menu__logo"><a href="#">ArmaxMG</a></h1>
+        <ul class="menu__list">
+          <li><a href="tel:+380687945051">+3806899999</a></li>
+          <li><a href="mailto:lazerarmax@gmail.com">lazerarmax@gmail.com</a></li>
         </ul>
-
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
@@ -35,12 +33,14 @@
             <li class="nav__item">
               <a href="calc.html">Калькулятор металу</a>
             </li>
-            <li class="nav__item">
-              <a href="calc.html">фейсбук</a>
-            </li>
+          </ul>
+
+          <ul class="nav__list-social">
+            <li><a href="#">face</a> </li>
+            <li><a href="#">instagram</a></li>
           </ul>
         </nav>
-        <button class="burger-btn">bur</button>
+
       </div>
 
 
@@ -50,7 +50,7 @@
   </header>
   <main class="main container">
 
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. A blanditiis facere in. Magni tenetur aliquid repudiandae
+    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. A blanditiis facere in. Magni tenetur aliquid repudiandae
     dolores expedita, nisi corporis sed eveniet, exercitationem obcaecati est nesciunt! Nulla minima ab dolorum?
     Error debitis ipsum voluptas laboriosam aliquam repellendus nesciunt corrupti maxime? Qui alias nobis fuga maxime,
     expedita quaerat repellendus laudantium. Nihil deserunt quam veritatis sunt recusandae expedita. Dignissimos nostrum
@@ -98,7 +98,7 @@
     Dicta suscipit temporibus qui placeat a nobis repellat quis repudiandae ad error id, neque tenetur aperiam veritatis
     voluptatum accusantium perspiciatis, fugit, quo eligendi quisquam itaque doloribus? Itaque repudiandae quis ipsam?
     Distinctio provident facere beatae sapiente cumque excepturi eaque! A, autem voluptatum atque, asperiores ullam,
-    voluptatem veniam eum totam quas harum ipsam iste veritatis. Fugit esse qui iusto dolorum aut laudantium!
+    voluptatem veniam eum totam quas harum ipsam iste veritatis. Fugit esse qui iusto dolorum aut laudantium! -->
   </main>
   <script src="js/index.js"></script>
 
