--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </ul>
 
           <ul class="nav__list-social">
-            <li><a href="#">face</a> </li>
-            <li><a href="#">instagram</a></li>
+            <li class="nav__item"><a href="#">face</a> </li>
+            <li class="nav__item"><a href="#">instagram</a></li>
           </ul>
         </nav>
 
