--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ArmaxMG</title>
   <link rel="stylesheet" href="styles/style-min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@400;500;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -14,11 +22,12 @@
     <div class="header__container container">
       <div class="menu">
         <button class="burger-btn" href="#"><span></span></button>
-        <h1 class="menu__logo"><a href="#">ArmaxMG</a></h1>
-        <ul class="menu__list">
+        <h1 class="menu__title"><a class="menu__link-logo" href=" #"><img class="menu__logo" src=" img/logo.png"
+              alt=""></a></h1>
+        <!-- <ul class="menu__list">
           <li><a href="tel:+380687945051">+3806899999</a></li>
           <li><a href="mailto:lazerarmax@gmail.com">lazerarmax@gmail.com</a></li>
-        </ul>
+        </ul> -->
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
