--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
         <h1 class="header__content-title">
           Металообробка <span class="header__content-subtitle">будь-якої складності на замовлення</span>
         </h1>
+        <p class="header__content-text">Сучасні технології обробки металів.
+          Виготовлення виробів з металу будь-якої складності.
+          Європейська якість</p>
+
       </div>
-      
+      <button class="button header__content-button">Зворотній зв'язок</button>
     </div>
   </header>
   <main class="main container">
