--- a/index.html
+++ b/index.html
@@ -27,25 +27,26 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="calc.html">Послуги</a>
+              <a href="calc.html" class="link-hover">Послуги</a>
             </li>
             <li class="nav__item">
-              <a href="calc.html">Про нас</a>
+              <a href="calc.html" class="link-hover">Про нас</a>
             </li>
             <li class="nav__item">
-              <a href="calc.html">Контакти</a>
+              <a href="calc.html" class="link-hover">Контакти</a>
             </li>
             <li class="nav__item">
-              <a href="calc.html">Калькулятор металу</a>
+              <a href="calc.html" class="link-hover">Калькулятор металу</a>
             </li>
           </ul>
           <ul class="nav__list nav__list-social">
-            <li class="nav__item-social"><a href="tel:+380687945051">+38 (068) 999 99</a></li>
-            <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com">lazerarmax@gmail.com</a></li>
-            <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/"><img src="../img/facebook.svg"
-                  alt="facebook"></a></li>
-            <li class="nav__item-social"><a href="tg://resolve?domain=<dimaKromiak>"><img src="../img/telegram.png"
-                  alt="telegram"></a>
+            <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
+            <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com"
+                class="link-hover">lazerarmax@gmail.com</a></li>
+            <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/" class="link-social"><img
+                  src="../img/facebook.svg" alt="facebook"></a></li>
+            <li class="nav__item-social"><a href="tg://resolve?domain=dimaKromiak" class="link-social"><img
+                  src="../img/telegram.png" alt="telegram"></a>
             </li>
           </ul>
         </nav>
