--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
             <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
             <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com"
                 class="link-hover">lazerarmax@gmail.com</a></li>
+
             <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/" class="link-social"><img
                   src="../img/facebook.svg" alt="facebook"></a></li>
             <li class="nav__item-social"><a href="tg://resolve?domain=dimaKromiak" class="link-social"><img
                   src="../img/telegram.png" alt="telegram"></a>
             </li>
+            <li class="nav__item-social">Контактна інформація</li>
           </ul>
         </nav>
       </div>
