--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li class="nav__item-social"><a href="tg://resolve?domain=dimaKromiak" class="link-social"><img
                   src="../img/telegram.png" alt="telegram"></a>
             </li>
-            <li class="nav__item-social">Контактна інформація</li>
+            <li class="nav__item-social nav__item---info">Контактна інформація</li>
           </ul>
         </nav>
       </div>
