--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
             <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/" class="link-social"><img
                   src="../img/facebook.svg" alt="facebook"></a></li>
-            <li class="nav__item-social"><a href="tg://resolve?domain=dimaKromiak" class="link-social"><img
-                  src="../img/telegram.png" alt="telegram"></a>
+            <li class="nav__item-social nav__item--telegram"><a href="tg://resolve?domain=dimaKromiak"
+                class="link-social"><img src="../img/telegram.png" alt="telegram"></a>
             </li>
             <li class="nav__item-social nav__item---info">Контактна інформація</li>
           </ul>
