--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 
 <body>
   <header class="header">
+    <ul class="nav__list nav__list-social nav__list--desktop">
+      <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
+      <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com" class="link-hover">lazerarmax@gmail.com</a>
+      </li>
+
+      <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/" class="link-social"><img
+            src="img/facebook.svg" alt="facebook"></a></li>
+      <li class="nav__item-social nav__item--telegram"><a href="tg://resolve?domain=dimaKromiak"
+          class="link-social"><img src="img/telegram.png" alt="telegram"></a>
+      </li>
+      <li class="nav__item-social"><a href="tel:+380687945051" class="link-social"><img src="img/phone.png"
+            alt="phone"></a></li>
+
+      <li class="nav__item-social nav__item---info">Контактна інформація</li>
+
+    </ul>
     <div class="header__container container">
       <div class="menu">
         <button class="burger-btn" href="#"><span></span></button>
@@ -39,17 +55,16 @@
               <a href="calc.html" class="link-hover">Калькулятор металу</a>
             </li>
           </ul>
-          <ul class="nav__list nav__list-social">
+          <ul class="nav__list nav__list-social nav__list--mobile">
             <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
             <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com"
                 class="link-hover">lazerarmax@gmail.com</a></li>
 
             <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/" class="link-social"><img
-                  src="../img/facebook.svg" alt="facebook"></a></li>
+                  src="img/facebook.svg" alt="facebook"></a></li>
             <li class="nav__item-social nav__item--telegram"><a href="tg://resolve?domain=dimaKromiak"
-                class="link-social"><img src="../img/telegram.png" alt="telegram"></a>
+                class="link-social"><img src="img/telegram.png" alt="telegram"></a>
             </li>
-            <li class="nav__item-social nav__item---info">Контактна інформація</li>
           </ul>
         </nav>
       </div>
