--- a/index.html
+++ b/index.html
@@ -68,21 +68,39 @@
           </ul>
         </nav>
       </div>
-      <div class="header__content">
+      <div class="header__content header__inner">
         <h1 class="header__content-title">
-          Металообробка <span class="header__content-subtitle">будь-якої складності на замовлення</span>
+          Металообробка будь-якої складності на замовлення
         </h1>
         <p class="header__content-text">Сучасні технології обробки металів.
           Виготовлення виробів з металу будь-якої складності.
           Європейська якість</p>
-
       </div>
-      <button class="button header__content-button">Зворотній зв'язок</button>
+      <div class="header-form header__inner">
+        <h3 class="header-form__title">Надіслати запит:</h3>
+
+        <form action="">
+          <input class="input-name" type="text" placeholder="Ім'я">
+          <input class="input-number" type="tel" placeholder="Телефон">
+          <button class="button header__content-button" type="submit">Надіслати</button>
+        </form>
+      </div>
+      <!-- <button class="button header__content-button modal-active">Зворотній зв'язок</button> -->
     </div>
+
   </header>
   <main class="main container">
   </main>
+  <footer>
+
+  </footer>
+
+  <div class="modal">
+    ALLLLO
+    <button class="close-button">klick</button>
+  </div>
   <script src="js/index.js"></script>
+
 
 </body>
 
