--- a/index.html
+++ b/index.html
@@ -68,25 +68,28 @@
           </ul>
         </nav>
       </div>
-      <div class="header__content header__inner">
-        <h1 class="header__content-title">
-          Металообробка будь-якої складності на замовлення
-        </h1>
-        <p class="header__content-text">Сучасні технології обробки металів.
-          Виготовлення виробів з металу будь-якої складності.
-          Європейська якість</p>
-      </div>
-      <div class="header-form header__inner">
-        <h3 class="header-form__title">Надіслати запит:</h3>
+      <div class="header__content--container">
+        <div class="header__content header__inner">
+          <h1 class="header__content-title">
+            Металообробка будь-якої складності на замовлення
+          </h1>
+          <p class="header__content-text">Сучасні технології обробки металів.
+            Виготовлення виробів з металу будь-якої складності.
+            Європейська якість</p>
+        </div>
+        <div class="header__form header__inner">
+          <h3 class="header__form-title">Надіслати запит :</h3>
 
-        <form action="">
-          <input class="input-name" type="text" placeholder="Ім'я">
-          <input class="input-number" type="tel" placeholder="Телефон">
-          <button class="button header__content-button" type="submit">Надіслати</button>
-        </form>
+          <form action="">
+            <input class="input-name" type="text" placeholder="Ім'я">
+            <input class="input-number" type="tel" placeholder="Телефон">
+            <button class="button header__content-button" type="submit">Надіслати</button>
+          </form>
+        </div>
+        <!-- <button class="button header__content-button modal-active">Зворотній зв'язок</button> -->
       </div>
-      <!-- <button class="button header__content-button modal-active">Зворотній зв'язок</button> -->
     </div>
+
 
   </header>
   <main class="main container">
@@ -95,10 +98,7 @@
 
   </footer>
 
-  <div class="modal">
-    ALLLLO
-    <button class="close-button">klick</button>
-  </div>
+
   <script src="js/index.js"></script>
 
 
