--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="header__content--container">
         <div class="header__content header__inner">
           <h1 class="header__content-title">
-            лашара єс!@
+            Металообробка будь-якої складності на замовлення.
           </h1>
           <p class="header__content-text">Сучасні технології обробки металів.
             Виготовлення виробів з металу будь-якої складності.
