--- a/index.html
+++ b/index.html
@@ -89,11 +89,26 @@
         <!-- <button class="button header__content-button modal-active">Зворотній зв'язок</button> -->
       </div>
     </div>
-
-
   </header>
-  <main class="main container">
-    <div>123</div>
+
+  <main class="main">
+    <div class="container">
+      <section class="main__header preview">
+        <p class="preview__title">Виконуємо комплексну високоточну металообробку на верстатах з ЧПУ</p>
+        <p class="preview__text">Надаємо комплекс послуг з обробки металу —
+          <a class="preview__link" href="#"><span>лазерна порізка</span></a>
+          <a class="preview__link" href="#"><span>гнуття деталей,</span></a>
+          <a class="preview__link" href="#"><span>зварювання</span></a>
+          металевих виробів та форм
+          високої складності. Виробництво деталей для важкої і легкої промисловості, а також складних і відповідальних
+          компонентів для точного обладнання.
+        </p>
+        <p class="preview__text">
+          Своїм клієнтам ми пропонуємо швидкий попередній прорахунок і виконання замовлення, робимо все необхідне, щоб
+          бути кращим партнером у сфері виготовлення металевих запчастин і деталей.
+        </p>
+      </section>
+    </div>
   </main>
   <footer>
 
