--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       <section class="main__header preview">
         <p class="preview__title">Виконуємо комплексну високоточну металообробку на верстатах з ЧПУ</p>
         <p class="preview__text">Надаємо комплекс послуг з обробки металу —
-          <a class="preview__link" href="#"><span>лазерна порізка</span></a>
-          <a class="preview__link" href="#"><span>гнуття деталей,</span></a>
-          <a class="preview__link" href="#"><span>зварювання</span></a>
+          <a class="preview__link" href="#">лазерна порізка,</a>
+          <a class="preview__link" href="#">гнуття деталей,</a>
+          <a class="preview__link" href="#">зварювання</a>
           металевих виробів та форм
           високої складності. Виробництво деталей для важкої і легкої промисловості, а також складних і відповідальних
           компонентів для точного обладнання.
