--- a/index.html
+++ b/index.html
@@ -108,6 +108,56 @@
           бути кращим партнером у сфері виготовлення металевих запчастин і деталей.
         </p>
       </section>
+
+      <section class="services">
+        <h3 class="services__title">Наші послуги</h1>
+        <div class="services__container">
+          <article class="services__card">
+            <figure class="services__content">
+              <picture>
+                <img class="services__img" src="../img/lazer.jpg" alt="lazer" width="300" height="200">
+                
+              </picture>
+              <figcaption class="services__figcaption">
+                <div class="services__name">
+                  <a class="services__name-link" href="#">
+                    Лазерна порізка
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="services__card">
+            <figure class="services__content">
+              <picture>
+                <source srcset="">
+              </picture>
+              <figcaption class="services__figcaption">
+                <div class="services__name">
+                  <a class="services__name-link" href="#">
+                     Лазерна порізка
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="services__card">
+            <figure class="services__content">
+              <picture>
+                <source srcset="">
+              </picture>
+              <figcaption class="services__figcaption">
+                <div class="services__name">
+                  <a class="services__name-link" href="#">
+                     Лазерна порізка
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+        </div>
+        
+      </section>
     </div>
   </main>
   <footer>
