--- a/index.html
+++ b/index.html
@@ -126,11 +126,10 @@
                   </a>
                 </div>
                 <div class="services__hover-content">
-                  <h4 class="services__hover-title">Ен Сі Інжиніринг Україна пропонує широкий спектр токарських послуг
-                    для
-                    корпоративного та
-                    приватного секторів.</h4>
-                  <p class="services__hover-text">Детальніше<span></span></p>
+                  <h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи високу точність і відмінну швидкість роботи.</h4>
+                  <a class="services__hover-text" href="#">
+                    <span class="services__hover--circle">Детальніше</span>
+                  </a>
                   <a class="services__link" href="#"></a>
                 </div>
 
