--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                   </a>
                 </div>
                 <div class="services__hover-content">
-                  <h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи високу точність і відмінну швидкість роботи.</h4>
+                  <h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи
+                    високу точність і відмінну швидкість роботи.</h4>
                   <a class="services__hover-text" href="#">
                     <span class="services__hover--circle">Детальніше</span>
                   </a>
@@ -136,17 +137,51 @@
               </figcaption>
             </figure>
           </article>
+
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/ sheet-bending.png" alt="lazer" width="300" height="200">
+                <img class="services__img" src="../img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
                 <div class="services__name">
                   <a class="services__name-link" href="#">
-                    Гнуття металу
+                    Гнуття деталей
                   </a>
+                </div>
+                <div class="services__hover-content">
+                  <h4 class="services__hover-title">Гнуття металу - э однією з основних сфер застосування листового
+                    металу є виготовлення виробів із зігнутих листових деталей.</h4>
+                  <a class="services__hover-text" href="#">
+                    <span class="services__hover--circle">Детальніше</span>
+                  </a>
+                  <a class="services__link" href="#"></a>
+                </div>
+
+              </figcaption>
+            </figure>
+          </article>
+
+          <article class="services__card">
+            <figure class="services__content">
+              <picture>
+                <img class="services__img" src="../img/pipe-bending.jpg" alt=" lazer" width="300" height="200">
+
+              </picture>
+              <figcaption class="services__figcaption">
+                <div class="services__name">
+                  <a class="services__name-link" href="#">
+                    Гнуття труби
+                  </a>
+                </div>
+                <div class="services__hover-content">
+                  <h4 class="services__hover-title">Ми забезпечуємо професійне гнуття труб з чорної сталі, оцинкованої
+                    сталі та нержавіючої сталі діаметром від 16 до 32 мм.</h4>
+                  <a class="services__hover-text" href="#">
+                    <span class="services__hover--circle">Детальніше</span>
+                  </a>
+                  <a class="services__link" href="#"></a>
                 </div>
               </figcaption>
             </figure>
@@ -154,37 +189,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/pipe-bending.jpeg" alt="lazer" width="300" height="200">
-
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Гнуття труб
-                  </a>
-                </div>
-              </figcaption>
-            </figure>
-          </article>
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="../img/lazer.jpg" alt="lazer" width="300" height="200">
-
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Порошкове фарбування
-                  </a>
-                </div>
-              </figcaption>
-            </figure>
-          </article>
-          <-- <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="../img/lazer.jpg" alt="lazer" width="300" height="200">
+                <img class="services__img" src="../img/welder.jpg" alt="lazer" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
@@ -193,25 +198,68 @@
                     Зварювальні роботи
                   </a>
                 </div>
+                <div class="services__hover-content">
+                  <h4 class="services__hover-title">Наші фахівці виконають складні зварювальні роботи, виготовлять на
+                    замовлення металоконструкції та деталі з прокату, листового металу.</h4>
+                  <a class="services__hover-text" href="#">
+                    <span class="services__hover--circle">Детальніше</span>
+                  </a>
+                  <a class="services__link" href="#"></a>
+                </div>
+
               </figcaption>
             </figure>
-            </article>
+          </article>
 
-            <article class="services__card">
-              <figure class="services__content">
-                <picture>
-                  <img class="services__img" src="../img/lazer.jpg" alt="lazer" width="300">
+          <article class="services__card">
+            <figure class="services__content">
+              <picture>
+                <img class="services__img" src="../img/powder-painting.jpg" alt="lazer" width="300" height="200">
 
-                </picture>
-                <figcaption class="services__figcaption">
-                  <div class="services__name">
-                    <a class="services__name-link" href="#">
-                      Розробка креслень
-                    </a>
-                  </div>
-                </figcaption>
-              </figure> -->
-              <!-- </article> -->
+              </picture>
+              <figcaption class="services__figcaption">
+                <div class="services__name">
+                  <a class="services__name-link" href="#">
+                    Порошкове фарбування
+                  </a>
+                </div>
+                <div class="services__hover-content">
+                  <h4 class="services__hover-title">Порошкове фарбування металевих виробів забезпечує високу якість
+                    покриття., зберігає відмінні фізико-хімічні та оздоблювальні характеристики.</h4>
+                  <a class="services__hover-text" href="#">
+                    <span class="services__hover--circle">Детальніше</span>
+                  </a>
+                  <a class="services__link" href="#"></a>
+                </div>
+
+              </figcaption>
+            </figure>
+          </article>
+
+          <article class="services__card">
+            <figure class="services__content">
+              <picture>
+                <img class="services__img" src="../img/metal-products.jpg" alt="lazer" width="300" height="200">
+
+              </picture>
+              <figcaption class="services__figcaption">
+                <div class="services__name">
+                  <a class="services__name-link" href="#">
+                    Вироби з металу
+                  </a>
+                </div>
+                <div class="services__hover-content">
+                  <h4 class="services__hover-title">Виконуємо нестандартні та ексклюзивні замовлення на прохання
+                    клієнтів - великих промислових підприємств, комерційних організацій і виробничих фірм.</h4>
+                  <a class="services__hover-text" href="#">
+                    <span class="services__hover--circle">Детальніше</span>
+                  </a>
+                  <a class="services__link" href="#"></a>
+                </div>
+
+              </figcaption>
+            </figure>
+          </article>
         </div>
 
     </section>
