--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/lazer.jpg" alt="lazer" width="300" height="200">
+                <img class="services__img" src="/img/lazer.jpg" alt="1" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
