--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
+                <img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
@@ -166,7 +166,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/pipe-bending.jpg" alt=" lazer" width="300" height="200">
+                <img class="services__img" src="img/pipe-bending.jpg" alt=" lazer" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
@@ -189,7 +189,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/welder.jpg" alt="lazer" width="300" height="200">
+                <img class="services__img" src="img/welder.jpg" alt="lazer" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
@@ -214,7 +214,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/powder-painting.jpg" alt="lazer" width="300" height="200">
+                <img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
@@ -239,7 +239,7 @@
           <article class="services__card">
             <figure class="services__content">
               <picture>
-                <img class="services__img" src="../img/metal-products.jpg" alt="lazer" width="300" height="200">
+                <img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200">
 
               </picture>
               <figcaption class="services__figcaption">
