--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
 
     <section class="section services">
-      <h3 class="section__title">Наші послуги</h1>
+      <h3 class="section__title services__title">Наші послуги</h1>
         <div class="services__container">
           <article class="services__card">
             <figure class="services__content">
@@ -137,7 +137,6 @@
               </figcaption>
             </figure>
           </article>
-
           <article class="services__card">
             <figure class="services__content">
               <picture>
@@ -162,7 +161,6 @@
               </figcaption>
             </figure>
           </article>
-
           <article class="services__card">
             <figure class="services__content">
               <picture>
@@ -210,7 +208,6 @@
               </figcaption>
             </figure>
           </article>
-
           <article class="services__card">
             <figure class="services__content">
               <picture>
@@ -235,7 +232,6 @@
               </figcaption>
             </figure>
           </article>
-
           <article class="services__card">
             <figure class="services__content">
               <picture>
