--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <link rel="stylesheet" href="styles/style-min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@400;500;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -86,7 +82,6 @@
             <button class="button header__content-button" type="submit">Надіслати</button>
           </form>
         </div>
-        <!-- <button class="button header__content-button modal-active">Зворотній зв'язок</button> -->
       </div>
     </div>
   </header>
